# mcmc

./: .babelrc  .eslintrc  .gitignore  README.md  index.html  package.json  webpack.config.js
__tests__/: Do.test.js  MarkovChain.test.js  Primitive.test.js  RandomMap.test.js  Sampler.test.js  dst.test.js  intepreter.test.js  utils.test.js
examples/: coal.js  example-plotter.R  height.js  jest.config.json  linearRegression.js
examples/testdata/: coal.js  linearPoints.js
examples/utils/: file.js
haskell/: haskell.cabal
haskell/Thesis/: FreeState.hs  Model.hs  Random.hs  Rejection.hs  Tele.hs  Transformer.hs  _FreeState.hsplay  _Model.hsplay  _Random.hsplay  _Rejection.hsplay  _Tele.hsplay  _Transformer.hsplay
src/: Do.js  FromIterator.js  MarkovChain.js  RandomMap.js  Sampler.js  types.js
src/distributions/: Bernoulli.js  Beta.js  ContinuousDistribution.js  DiscreteUniform.js  Exponential.js  Normal.js  Poisson.js  Primitive.js  Uniform.js  index.js
src/dst/: dst.js  interpreter.js
src/exception/: NotImplementedError.js
src/experiments/: index.js  liveplot.js
src/monoid/: Monoid.js  average.js
src/stream/: buffer.js
src/utils/: data.js  plot.js
